[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hadm"
version = "1.0.0"
description = "Simplified PyTorch re-implementation of HADM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["hadm", "pytorch", "torchvision", "detection", "anomaly detection", "distorted-image detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
    "omegaconf>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hadm"]
